fixed height on mobile login page

--- a/frontend/src/pages/Authentication/Authentication.scss
+++ b/frontend/src/pages/Authentication/Authentication.scss
@@ -101,7 +101,7 @@
 @media only screen and (max-width: 820px) {
   .Authentication-Container{
     width: 100%;
-    height: 100%;
+    height: 95%;
     margin-left: 0;
     margin-top: 0;
   }
